--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "Value Seeker",
+  "name": "Value Seeker", 
   "description": "A Chrome extension to seek values",
   "version": "1.0.0",
   "action": {
-    "default_popup": "index.html",
     "default_title": "Open Value Seeker"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "sidePanel"
   ],
+  "side_panel": {
+    "default_path": "index.html"
+  },
+  "minimum_chrome_version": "116",
   "icons": {
     "16": "logo192.png",
-    "48": "logo192.png",
+    "48": "logo192.png", 
     "128": "logo192.png"
   },
-  "scripts": {
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build"
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
   }
 }
